--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.4",
     "@react-navigation/stack": "^5.12.1",
+    "@types/react": "^16.9.56",
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.21.0",
@@ -22,7 +23,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "2.5.0",
-    "react": "16.13.1",
+    "react": "^17.0.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-iphone-x-helper": "^1.3.0",
