--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,8 @@
           }
         ],
         "prettier/prettier": "error",
-        "no-use-before-define": "off"
+        "no-use-before-define": "off",
+        "react/jsx-one-expression-per-line": "on"
     },
     "settings": {
       "import/resolver": {
