--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "reverse": "adb reverse tcp:3333 tcp:3333"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
