--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.21.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.5.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "2.3.0",
     "react": "^17.0.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
@@ -47,13 +47,16 @@
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.9",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "babel-jest": "^25.1.0",
-    "eslint": "6.8.0",
+    "eslint": "7.12.1",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "4.2.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.1.2",
